// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser call 1`] = `
Object {
  "body": Array [
    Object {
      "name": "foo",
      "type": "call",
    },
  ],
  "type": "program",
}
`;

exports[`parser function 1`] = `
Object {
  "body": Array [
    Object {
      "body": Array [
        Object {
          "type": "identifier",
          "value": "b",
        },
        Object {
          "type": "identifier",
          "value": "c",
        },
        Object {
          "type": "identifier",
          "value": "d",
        },
        Object {
          "type": "identifier",
          "value": "e",
        },
        Object {
          "type": "identifier",
          "value": "f",
        },
        Object {
          "type": "identifier",
          "value": "g",
        },
      ],
      "name": "foo",
      "type": "function",
    },
  ],
  "type": "program",
}
`;

exports[`parser identifier 1`] = `
Object {
  "body": Array [
    Object {
      "type": "identifier",
      "value": "helloWorld",
    },
  ],
  "type": "program",
}
`;

exports[`parser literal 1`] = `
Object {
  "body": Array [
    Object {
      "type": "literal",
      "value": "hello",
    },
  ],
  "type": "program",
}
`;

exports[`parser literal 2`] = `
Object {
  "body": Array [
    Object {
      "type": "literal",
      "value": 1,
    },
  ],
  "type": "program",
}
`;

exports[`parser loop 1`] = `
Object {
  "body": Array [
    Object {
      "body": Array [
        Object {
          "type": "identifier",
          "value": "b",
        },
        Object {
          "type": "identifier",
          "value": "c",
        },
        Object {
          "type": "identifier",
          "value": "d",
        },
        Object {
          "type": "identifier",
          "value": "e",
        },
        Object {
          "type": "identifier",
          "value": "f",
        },
        Object {
          "type": "identifier",
          "value": "g",
        },
      ],
      "stack": "a",
      "type": "loop",
    },
  ],
  "type": "program",
}
`;
